Add jlink plugin